// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneInput /> Other: should render just text field with able to input only digits 1`] = `
<PhoneInput
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  value="0000000"
>
  <div
    className="root"
  >
    <ForwardRef(TextField)
      className="field"
      endAdornment={
        <div
          className="adornment"
          data-testid="phone-input:dropdown-opener"
          onClick={[Function]}
        >
          <img
            alt=""
            height={24}
            src="other.png"
            width={24}
          />
          <ForwardRef(DownSVG)
            className="arrow"
          />
        </div>
      }
      label="Телефон"
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      value="0000000"
    >
      <div
        className="root field"
      >
        <div
          className="reset input-block variant-desktop size-l with-label rounds-sm__all"
          data-testid="text-field:block"
          onClick={[Function]}
        >
          <div
            className="main-column"
          >
            <label
              className="label variant-desktop filled"
              data-testid="text-field:label"
            >
              Телефон
            </label>
            <div
              className="input-wrapper"
            >
              <ForwardRef(BaseInput)
                className="base-input variant-desktop size-l"
                data-testid="text-field:field"
                multiline={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                value="0000000"
              >
                <div
                  className="reset root base-input variant-desktop size-l"
                  data-testid="base-input:root"
                >
                  <input
                    className="field reset"
                    data-testid="text-field:field"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    value="0000000"
                  />
                </div>
              </ForwardRef(BaseInput)>
            </div>
          </div>
          <Box
            alignItems="center"
            display="flex"
            marginLeft={4}
          >
            <div
              className="display-flex align-items-center M-l__4"
            >
              <div
                className="adornment"
                data-testid="phone-input:dropdown-opener"
                onClick={[Function]}
              >
                <img
                  alt=""
                  height={24}
                  src="other.png"
                  width={24}
                />
                <ForwardRef(DownSVG)
                  className="arrow"
                >
                  <svg
                    className="arrow"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M3.247 6.342a1 1 0 0 1 1.412-.095L8 9.171l3.341-2.924a1 1 0 0 1 1.318 1.506l-4 3.5a1 1 0 0 1-1.317 0l-4-3.5a1 1 0 0 1-.095-1.411Z"
                      fillRule="evenodd"
                    />
                  </svg>
                </ForwardRef(DownSVG)>
              </div>
            </div>
          </Box>
        </div>
      </div>
    </ForwardRef(TextField)>
  </div>
</PhoneInput>
`;

exports[`<PhoneInput /> should render without props 1`] = `
<PhoneInput>
  <div
    className="root"
  >
    <ForwardRef(MaskedField)
      className="field"
      endAdornment={
        <div
          className="adornment"
          data-testid="phone-input:dropdown-opener"
          onClick={[Function]}
        >
          <img
            alt=""
            height={24}
            src="russia.png"
            width={24}
          />
          <ForwardRef(DownSVG)
            className="arrow"
          />
        </div>
      }
      label="Телефон"
      mask="+7 (___) ___-__-__"
      multiline={false}
      onBlur={[Function]}
      onClick={[Function]}
      value=""
    >
      <ForwardRef(TextField)
        className="field"
        endAdornment={
          <div
            className="adornment"
            data-testid="phone-input:dropdown-opener"
            onClick={[Function]}
          >
            <img
              alt=""
              height={24}
              src="russia.png"
              width={24}
            />
            <ForwardRef(DownSVG)
              className="arrow"
            />
          </div>
        }
        label="Телефон"
        multiline={false}
        onBlur={[Function]}
        onClick={[Function]}
        restPlaceholder={
          {
            "shiftValue": "+7 (",
            "value": "___) ___-__-__",
          }
        }
      >
        <div
          className="root field"
        >
          <div
            className="reset input-block variant-desktop size-l with-label rounds-sm__all"
            data-testid="text-field:block"
            onClick={[Function]}
          >
            <div
              className="main-column"
            >
              <label
                className="label variant-desktop filled"
                data-testid="text-field:label"
              >
                Телефон
              </label>
              <div
                className="input-wrapper"
              >
                <ForwardRef(BaseInput)
                  className="base-input variant-desktop size-l"
                  data-testid="text-field:field"
                  multiline={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  restPlaceholder={
                    {
                      "shiftValue": "+7 (",
                      "value": "___) ___-__-__",
                    }
                  }
                >
                  <div
                    className="reset root base-input variant-desktop size-l"
                    data-testid="base-input:root"
                  >
                    <span
                      aria-hidden={true}
                      className="fake-text"
                    >
                      <span
                        className="invisible-value"
                      >
                        +7 (
                      </span>
                      <span
                        className="placeholder"
                      >
                        ___) ___-__-__
                      </span>
                    </span>
                    <input
                      className="field reset"
                      data-testid="text-field:field"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                    />
                  </div>
                </ForwardRef(BaseInput)>
              </div>
            </div>
            <Box
              alignItems="center"
              display="flex"
              marginLeft={4}
            >
              <div
                className="display-flex align-items-center M-l__4"
              >
                <div
                  className="adornment"
                  data-testid="phone-input:dropdown-opener"
                  onClick={[Function]}
                >
                  <img
                    alt=""
                    height={24}
                    src="russia.png"
                    width={24}
                  />
                  <ForwardRef(DownSVG)
                    className="arrow"
                  >
                    <svg
                      className="arrow"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clipRule="evenodd"
                        d="M3.247 6.342a1 1 0 0 1 1.412-.095L8 9.171l3.341-2.924a1 1 0 0 1 1.318 1.506l-4 3.5a1 1 0 0 1-1.317 0l-4-3.5a1 1 0 0 1-.095-1.411Z"
                        fillRule="evenodd"
                      />
                    </svg>
                  </ForwardRef(DownSVG)>
                </div>
              </div>
            </Box>
          </div>
        </div>
      </ForwardRef(TextField)>
    </ForwardRef(MaskedField)>
  </div>
</PhoneInput>
`;
